[package]
name = "dioxus-websocket-hooks"
version = "0.4.0"
authors = ["Charles-Henri Mousset <ch.mousset@gmail.com", "Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/chmousset/dioxus-websocket-hooks"
description = "Dioxus hooks for websocket connections"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
reqwasm = "0.5.0"
futures = "0.3.28"
serde = { version = "1.0" }
serde_json = "1.0"
async-rwlock = "1.3.0"
web-sys = { version = "0.3.44", features = ['console'] }
async-std = "1.10.0"

[dev-dependencies]
dioxus = "0.4"
dioxus-web = "0.4"
fermi = "0.4"
async-rwlock = "1.3.0"
